notebooks: svm builder version 1.0

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -23,16 +23,19 @@
     "\n",
     "DATASETS_DIR = '../datasets/csvs/'\n",
     "SCHEMAS_DIR = '../datasets/schemas/'\n",
-    "\n",
+    "SVM_DIR = '../datasets/svms/hot/'\n",
     "GS_PATH = '{:}{:}'.format(DATASETS_DIR, 'gs.csv')\n",
     "GS_SCHEMA_PATH = '{:}{:}'.format(SCHEMAS_DIR, 'gs.yaml')\n",
     "\n",
-    "# re_replace = re.compile(r'[\\+|\\-|\\d]')"
+    "DATASET_SIZE= 5931\n",
+    "DATASET_TRAIN_SIZE= 5099\n",
+    "DATASET_VALID_SIZE= 569\n",
+    "DATASET_TEST_SIZE=  263\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,19 +129,18 @@
    ],
    "source": [
     "\n",
-    "columns_helper = [(re.sub(r'[\\+|\\-|\\d]', '', col), col) \n",
-    "                  for col in df.columns.tolist()]\n",
+    "columns_mapper = {col: re.sub(r'[\\+|\\-|\\d]', '', col) for col in df.columns.tolist()}\n",
     "\n",
-    "mapper = {rawcol:len(dictschema[basecol].get('domain',[1]))\n",
-    "          for basecol, rawcol in columns_helper}\n",
+    "bounds_mapper = {colfeat:len(dictschema[colbase].get('domain',[1]))\n",
+    "          for colfeat, colbase in columns_mapper.items()}\n",
     "          \n",
     "\n",
-    "print(mapper)"
+    "print(bounds_mapper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +156,7 @@
     "lexicons = {col : \n",
     "                dict(\n",
     "                     zip(dictschema[col]['domain'], \n",
-    "                         range(1, mapper[col]+1)\n",
+    "                         range(1, bounds_mapper[col]+1)\n",
     "                        )\n",
     "                    )\n",
     "             for col in dictschema if 'domain' in dictschema[col]}\n",
@@ -174,104 +176,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC', 'CTREE', 'PRED', 'FORM-3', 'FORM-2', 'FORM-1', 'FORM+1', 'FORM+2', 'FORM+3', 'LEMMA-3', 'LEMMA-2', 'LEMMA-1', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3', 'GPOS-3', 'GPOS-2', 'GPOS-1', 'GPOS+1', 'GPOS+2', 'GPOS+3']\n",
-      "FORM Brasília\n",
-      "LEMMA Brasília\n",
-      "GPOS PROP\n",
-      "MORF F|S\n",
-      "DTREE 5\n",
-      "FUNC ADVL\n",
-      "CTREE (FCL(NP*)\n",
-      "PRED -\n",
-      "FORM-3 nan\n",
-      "FORM-2 nan\n",
-      "FORM-1 nan\n",
-      "FORM+1 Pesquisa_Datafolha\n",
-      "FORM+2 publicada\n",
-      "FORM+3 hoje\n",
-      "LEMMA-3 nan\n",
-      "LEMMA-2 nan\n",
-      "LEMMA-1 nan\n",
-      "LEMMA+1 Pesquisa_Datafolha\n",
-      "LEMMA+2 publicar\n",
-      "LEMMA+3 hoje\n",
-      "GPOS-3 nan\n",
-      "GPOS-2 nan\n",
-      "GPOS-1 nan\n",
-      "GPOS+1 N\n",
-      "GPOS+2 V-PCP\n",
-      "GPOS+3 ADV\n",
-      "FORM Pesquisa_Datafolha\n",
-      "LEMMA Pesquisa_Datafolha\n",
-      "GPOS N\n",
-      "MORF F|S\n",
-      "DTREE 5\n",
-      "FUNC SUBJ\n",
-      "CTREE (NP*\n",
-      "PRED -\n",
-      "FORM-3 nan\n",
-      "FORM-2 nan\n",
-      "FORM-1 Brasília\n",
-      "FORM+1 publicada\n",
-      "FORM+2 hoje\n",
-      "FORM+3 revela\n",
-      "LEMMA-3 nan\n",
-      "LEMMA-2 nan\n",
-      "LEMMA-1 Brasília\n",
-      "LEMMA+1 publicar\n",
-      "LEMMA+2 hoje\n",
-      "LEMMA+3 revelar\n",
-      "GPOS-3 nan\n",
-      "GPOS-2 nan\n",
-      "GPOS-1 PROP\n",
-      "GPOS+1 V-PCP\n",
-      "GPOS+2 ADV\n",
-      "GPOS+3 V-FIN\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{}"
+       "{134: 1,\n",
+       " 13386: 1,\n",
+       " 22362: 1,\n",
+       " 22386: 1,\n",
+       " 22417: 1,\n",
+       " 22514: 1,\n",
+       " 22551: 1,\n",
+       " 23172: 1,\n",
+       " 23627: 1,\n",
+       " 36917: 1,\n",
+       " 50207: 1,\n",
+       " 72569: 1,\n",
+       " 86827: 1,\n",
+       " 97445: 1,\n",
+       " 103367: 1,\n",
+       " 112438: 1,\n",
+       " 121509: 1,\n",
+       " 136790: 1,\n",
+       " 145405: 1,\n",
+       " 153753: 1,\n",
+       " 157793: 1,\n",
+       " 157818: 1,\n",
+       " 157843: 1,\n",
+       " 157890: 1,\n",
+       " 157902: 1,\n",
+       " 157922: 1}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(columns)\n",
-    "sparse = defaultdict(dict)\n",
-    "for idx in range(2):\n",
+    "args = [] \n",
+    "sparse_features = defaultdict(dict)\n",
+    "propositions = []        \n",
+    "for idx, propid in d['P'].items():\n",
     "    lb = 0 \n",
     "    for col in columns:\n",
+    "        base_col = columns_mapper[col]\n",
     "        categorical = d[col][idx] \n",
-    "        if categorical in lexicons[col]:\n",
-    "            sparse[idx][lb+lexicons[col][d[col][idx]]] \n",
+    "        if categorical in lexicons[base_col]:\n",
+    "            idx1 = lexicons[base_col][categorical]\n",
+    "            sparse_features[idx][lb + idx1]=1 \n",
     "        else:\n",
     "            # nan set to zero\n",
-    "            sparse[idx][lb+lexicons[col][d[col][idx]]] \n",
-    "            lb += mapper[col] \n",
+    "            sparse_features[idx][lb]=1 \n",
+    "        lb += bounds_mapper[col] \n",
     "\n",
-    "sparse[0]"
+    "    args.append(lexicons['ARG'][d['ARG'][idx]]) \n",
+    "    propositions.append( propid )\n",
+    "\n",
+    "        \n",
+    "sparse_features[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 23, 3, 43, 12]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "args[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>S</th>\n",
+       "      <th>P</th>\n",
+       "      <th>P_S</th>\n",
+       "      <th>FORM</th>\n",
+       "      <th>LEMMA</th>\n",
+       "      <th>GPOS</th>\n",
+       "      <th>MORF</th>\n",
+       "      <th>DTREE</th>\n",
+       "      <th>FUNC</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LEMMA+3</th>\n",
+       "      <th>LEMMA-1</th>\n",
+       "      <th>LEMMA-2</th>\n",
+       "      <th>LEMMA-3</th>\n",
+       "      <th>GPOS+1</th>\n",
+       "      <th>GPOS+2</th>\n",
+       "      <th>GPOS+3</th>\n",
+       "      <th>GPOS-1</th>\n",
+       "      <th>GPOS-2</th>\n",
+       "      <th>GPOS-3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INDEX</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>PROP</td>\n",
+       "      <td>F|S</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ADVL</td>\n",
+       "      <td>...</td>\n",
+       "      <td>hoje</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>V-PCP</td>\n",
+       "      <td>ADV</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID  S  P  P_S      FORM     LEMMA  GPOS MORF  DTREE  FUNC  ...    \\\n",
+       "INDEX                                                             ...     \n",
+       "0       1  1  1    0  Brasília  Brasília  PROP  F|S      5  ADVL  ...     \n",
+       "\n",
+       "      LEMMA+3 LEMMA-1 LEMMA-2 LEMMA-3 GPOS+1 GPOS+2 GPOS+3 GPOS-1 GPOS-2  \\\n",
+       "INDEX                                                                      \n",
+       "0        hoje     NaN     NaN     NaN      N  V-PCP    ADV    NaN    NaN   \n",
+       "\n",
+       "      GPOS-3  \n",
+       "INDEX         \n",
+       "0        NaN  \n",
+       "\n",
+       "[1 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# FORM .: first sparse feature = lexicons['FORM']['Brasília'] --> 134\n",
+    "# LEMMA .: second sparse feature = bounds_mapper['FORM'] + lexicons['LEMMA']['Brasília'] --> 13386\n",
+    "# GPOS .: third sparse feature =  bounds_mapper['FORM'] +  bounds_mapper['LEMMA'] + lexicons['GPOS']['PROP'] --> 22362\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for ds_type in ('train', 'test', 'valid'):    \n",
+    "    if ds_type in ('train'):                \n",
+    "      lb = 0\n",
+    "      ub = DATASET_TRAIN_SIZE \n",
+    "\n",
+    "    if ds_type in ('valid'):                \n",
+    "      lb = DATASET_TRAIN_SIZE \n",
+    "      ub = DATASET_TRAIN_SIZE + DATASET_VALID_SIZE\n",
+    "\n",
+    "    if ds_type in ('test'):                \n",
+    "      lb = DATASET_TRAIN_SIZE + DATASET_VALID_SIZE \n",
+    "      ub = DATASET_TRAIN_SIZE + DATASET_VALID_SIZE + DATASET_TEST_SIZE\n",
+    "        \n",
+    "    # saves the processed data\n",
+    "    svm_path = '{:}{:}.svm'.format(SVM_DIR, ds_type)\n",
+    "    with open(svm_path, mode='w') as f:\n",
+    "        for idx in sparse_features:\n",
+    "            p = propositions[idx]\n",
+    "            if p > lb and p < ub + 1:\n",
+    "                target = '{:} '.format(int(args[idx]))\n",
+    "                features = ' '.join([ '{:}:{:}'.format(key, val) \n",
+    "                     for key, val in sparse_features[idx].items()])\n",
+    "                ex = '{:}{:}\\n'.format(target, features)\n",
+    "                f.write(ex)\n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "            \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
