notebpooks: svm builder + glove 50

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,23 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../datasets')\n",
+    "\n",
     "from collections import defaultdict\n",
     "import pandas as pd\n",
     "import yaml\n",
     "import glob \n",
     "import re\n",
+    "from gensim.models import KeyedVectors\n",
+    "from data_propbankbr import propbankbr_arg2t\n",
     "\n",
     "DATASETS_DIR = '../datasets/csvs/'\n",
     "SCHEMAS_DIR = '../datasets/schemas/'\n",
-    "SVM_DIR = '../datasets/svms/hot/'\n",
+    "SVM_DIR = '../datasets/svms/'\n",
+    "EMBEDDINGS_DIR = '../datasets/txts/embeddings/'\n",
+    "\n",
     "GS_PATH = '{:}{:}'.format(DATASETS_DIR, 'gs.csv')\n",
     "GS_SCHEMA_PATH = '{:}{:}'.format(SCHEMAS_DIR, 'gs.yaml')\n",
+    "\n",
+    "GLOVE_S50_PATH = '{:}glove_s50.txt'.format(EMBEDDINGS_DIR)\n",
+    "WANG_S100_PATH = '{:}wang2vec_s100.txt'.format(EMBEDDINGS_DIR)\n",
+    "\n",
+    "\n",
     "\n",
     "DATASET_SIZE= 5931\n",
     "DATASET_TRAIN_SIZE= 5099\n",
@@ -140,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,41 +186,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{134: 1,\n",
-       " 13386: 1,\n",
-       " 22362: 1,\n",
+       "{11593: 1,\n",
+       " 21193: 1,\n",
        " 22386: 1,\n",
        " 22417: 1,\n",
-       " 22514: 1,\n",
+       " 22537: 1,\n",
        " 22551: 1,\n",
-       " 23172: 1,\n",
+       " 22674: 1,\n",
        " 23627: 1,\n",
        " 36917: 1,\n",
        " 50207: 1,\n",
-       " 72569: 1,\n",
-       " 86827: 1,\n",
-       " 97445: 1,\n",
+       " 74909: 1,\n",
+       " 77976: 1,\n",
+       " 93565: 1,\n",
        " 103367: 1,\n",
        " 112438: 1,\n",
        " 121509: 1,\n",
-       " 136790: 1,\n",
-       " 145405: 1,\n",
-       " 153753: 1,\n",
+       " 138358: 1,\n",
+       " 143940: 1,\n",
+       " 151144: 1,\n",
        " 157793: 1,\n",
        " 157818: 1,\n",
        " 157843: 1,\n",
-       " 157890: 1,\n",
-       " 157902: 1,\n",
-       " 157922: 1}"
+       " 157882: 1,\n",
+       " 157901: 1,\n",
+       " 157925: 1}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 23, 3, 43, 12]"
+       "[35, 59, 35, 7, 25]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +387,7 @@
        "[1 rows x 31 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,8 +400,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Convert ARGS into T"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['*', 'A0', 'A0', 'A0', 'V']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arguments = [value for key, value in d['ARG'].items()] \n",
+    "targets = propbankbr_arg2t(propositions, arguments)\n",
+    "\n",
+    "targets[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "target_keys = set(targets)\n",
+    "target_idxs = range(len(target_keys))\n",
+    "targets_mapper = dict(zip(target_keys, target_idxs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Save onehot representations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,22 +469,120 @@
     "      ub = DATASET_TRAIN_SIZE + DATASET_VALID_SIZE + DATASET_TEST_SIZE\n",
     "        \n",
     "    # saves the processed data\n",
-    "    svm_path = '{:}{:}.svm'.format(SVM_DIR, ds_type)\n",
+    "    svm_path = '{:}/{:}/{:}.svm'.format(SVM_DIR, 'hot', ds_type)\n",
     "    with open(svm_path, mode='w') as f:\n",
     "        for idx in sparse_features:\n",
     "            p = propositions[idx]\n",
     "            if p > lb and p < ub + 1:\n",
-    "                target = '{:} '.format(int(args[idx]))\n",
+    "                target = '{:} '.format(int(targets_mapper[targets[idx]]))\n",
     "                features = ' '.join([ '{:}:{:}'.format(key, val) \n",
     "                     for key, val in sparse_features[idx].items()])\n",
     "                ex = '{:}{:}\\n'.format(target, features)\n",
-    "                f.write(ex)\n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "            \n",
-    "        "
+    "                f.write(ex)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Glove embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word2vec = KeyedVectors.load_word2vec_format(GLOVE_S50_PATH, unicode_errors=\"ignore\")\n",
+    "embeddings_size = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def is_number(s):\n",
+    "    try:\n",
+    "        float(s)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "\n",
+    "# converts a word into a token,\n",
+    "# word might be in fact a number\n",
+    "def tokenize(word):\n",
+    "    token = word\n",
+    "    if is_number(word):\n",
+    "        token = '0'    \n",
+    "    elif word.lower() in word2vec:\n",
+    "        token = word.lower()\n",
+    "    else:\n",
+    "        token = 'unk'\n",
+    "    return token\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.1 Process replacing sparse with feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = [] \n",
+    "sparse_features = defaultdict(dict)\n",
+    "propositions = []        \n",
+    "for idx, propid in d['P'].items():\n",
+    "    lb = 0 \n",
+    "    for col in columns:\n",
+    "        base_col = columns_mapper[col]\n",
+    "        word = d[col][idx] \n",
+    "        if base_col in ('FORM', 'LEMMA'):\n",
+    "            sz = embeddings_size\n",
+    "            token = tokenize(word)\n",
+    "            values = list(word2vec[token])\n",
+    "                \n",
+    "            sparse_features[idx].update({\n",
+    "                i + lb: round(val, 7) \n",
+    "                for i, val in enumerate(values)\n",
+    "            })\n",
+    "        elif categorical in lexicons[base_col]:\n",
+    "            idx1 = lexicons[base_col][categorical]\n",
+    "            sparse_features[idx][lb + idx1]=1 \n",
+    "            sz = bounds_mapper[col] \n",
+    "        else:\n",
+    "            # nan set to zero\n",
+    "            sparse_features[idx][lb]=1 \n",
+    "            sz = bounds_mapper[col] \n",
+    "        lb += sz\n",
+    "\n",
+    "    args.append(lexicons['ARG'][d['ARG'][idx]]) \n",
+    "    propositions.append( propid )\n",
+    "\n",
+    "        \n",
+    "sparse_features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
