--- a/notebooks/07-evaluations_consolidate.ipynb
+++ b/notebooks/07-evaluations_consolidate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -166,52 +166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Python 3.6.3 |Anaconda custom (64-bit)| (default, Oct  6 2017, 12:04:38) \n",
-      "[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin\n",
-      "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
-      "(InteractiveConsole)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In : parsestr\n"
+      "liblinear accuracy:69.64\n",
+      "liblinear mse:20.12\n",
+      "liblinear accuracy:64.39\n",
+      "liblinear mse:30.03\n",
+      "svm: 29.22 25.91\n",
+      "liblinear accuracy:73.48\n",
+      "liblinear mse:85.46\n",
+      "liblinear accuracy:45.50\n",
+      "liblinear mse:175.61\n",
+      "svm: 1.8 0.53\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'svm_00'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In : thisdir\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'outputs/svm/emb_c-4/00'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
