notebooks: svm updates

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -209,32 +209,32 @@
     {
      "data": {
       "text/plain": [
-       "{5794: 1,\n",
-       " 17217: 1,\n",
-       " 22364: 1,\n",
+       "{4098: 1,\n",
+       " 16148: 1,\n",
+       " 22378: 1,\n",
        " 22386: 1,\n",
        " 22417: 1,\n",
-       " 22539: 1,\n",
+       " 22549: 1,\n",
        " 22551: 1,\n",
-       " 23409: 1,\n",
+       " 23222: 1,\n",
        " 23627: 1,\n",
        " 36917: 1,\n",
        " 50207: 1,\n",
-       " 70762: 1,\n",
-       " 82360: 1,\n",
-       " 102865: 1,\n",
+       " 69831: 1,\n",
+       " 89101: 1,\n",
+       " 92169: 1,\n",
        " 103367: 1,\n",
        " 112438: 1,\n",
        " 121509: 1,\n",
-       " 135545: 1,\n",
-       " 143064: 1,\n",
-       " 157451: 1,\n",
+       " 134938: 1,\n",
+       " 142802: 1,\n",
+       " 150198: 1,\n",
        " 157793: 1,\n",
        " 157818: 1,\n",
        " 157843: 1,\n",
-       " 157879: 1,\n",
+       " 157890: 1,\n",
        " 157908: 1,\n",
-       " 157940: 1}"
+       " 157943: 1}"
       ]
      },
      "execution_count": 7,
@@ -275,7 +275,7 @@
     {
      "data": {
       "text/plain": [
-       "[15, 22, 15, 18, 25]"
+       "[30, 8, 30, 45, 41]"
       ]
      },
      "execution_count": 8,
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -739,7 +739,8 @@
     "    for col in columns:\n",
     "        base_col = columns_mapper[col]\n",
     "        word = d[col][idx] \n",
-    "        bounds_mapper[col]['lb'] = lb if not 'lb' in bounds_mapper[col]\n",
+    "        if not 'lb' in bounds_mapper[col]:\n",
+    "            bounds_mapper[col]['lb'] = lb \n",
     "        if base_col in ('FORM', 'LEMMA', 'PRED'):\n",
     "            sz = embeddings_size\n",
     "            token = tokenize(word)\n",
@@ -758,7 +759,8 @@
     "            sparse_features[idx][lb]=1 \n",
     "            sz = dimension_mapper[col]           \n",
     "        lb += sz\n",
-    "        bounds_mapper[col]['ub'] = lb if not 'ub' in bounds_mapper[col]\n",
+    "        if not 'ub' in bounds_mapper[col]:\n",
+    "            bounds_mapper[col]['ub'] = lb \n",
     "\n",
     "    args.append(lexicons['ARG'][d['ARG'][idx]]) \n",
     "    propositions.append( propid )\n",
@@ -769,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -794,12 +796,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "series_d = defaultdict(list)\n",
     "for col in columns:\n",
     "    if is_dense(col, columns_mapper):\n",
@@ -812,9 +811,14 @@
     "        for d in range(lb, ub):\n",
     "            min_x = min(series_d[d])\n",
     "            max_x = max(series_d[d])\n",
+    "            for x in series_d[d]:\n",
+    "                if (2*x - min_x - max_x)/ (max_x - min_x) > 1 + 1e-5:\n",
+    "                    import code; code.interact(local=dict(globals(), **locals()))\n",
+    "                    \n",
     "            series_d[d] = [\n",
-    "                (2*x - min_x - max_x)/ max((max_x - min_x),x)\n",
-    "                for x in series_d[d]]\n",
+    "                (2*x - min_x - max_x)/ (max_x - min_x)\n",
+    "                for x in series_d[d]\n",
+    "            ]\n",
     "\n",
     "        # standardize\n",
     "        for d in range(lb, ub):\n",
@@ -822,10 +826,12 @@
     "            mu_x = sum(series_d[d]) / n\n",
     "            ssq_x = sum([(x - mu_x)*(x - mu_x) for x in series_d[d]])\n",
     "            std_x = math.sqrt(ssq_x/ (n-1))\n",
-    "            try:\n",
-    "                series_d[d] = [(x - mu_x)/ std_x for x in series_d[d]]\n",
-    "            except ZeroDivisionError:\n",
-    "                import code; code.interact(local=dict(globals(), **locals()))\n",
+    "            for x in series_d[d]:\n",
+    "                if (x - mu_x)/ std_x  > 1 + 1e-5:\n",
+    "                    import code; code.interact(local=dict(globals(), **locals()))\n",
+    "                    \n",
+    "            series_d[d] = [(x - mu_x)/ std_x for x in series_d[d]]\n",
+    "            \n",
     "\n",
     "        # move rescaled and standardized back to sparse_features\n",
     "        for idx in sparse_features:    \n",
