--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -807,30 +807,30 @@
     "        for idx in sparse_features:    \n",
     "            for x in range(lb, ub):\n",
     "                series_d[x].append(sparse_features[idx][x])\n",
-    "        # rescale\n",
-    "        for d in range(lb, ub):\n",
-    "            min_x = min(series_d[d])\n",
-    "            max_x = max(series_d[d])\n",
-    "            for x in series_d[d]:\n",
-    "                if (2*x - min_x - max_x)/ (max_x - min_x) > 1 + 1e-5:\n",
-    "                    import code; code.interact(local=dict(globals(), **locals()))\n",
-    "                    \n",
-    "            series_d[d] = [\n",
-    "                (2*x - min_x - max_x)/ (max_x - min_x)\n",
-    "                for x in series_d[d]\n",
-    "            ]\n",
-    "\n",
     "        # standardize\n",
     "        for d in range(lb, ub):\n",
     "            n = len(series_d[d])\n",
     "            mu_x = sum(series_d[d]) / n\n",
     "            ssq_x = sum([(x - mu_x)*(x - mu_x) for x in series_d[d]])\n",
     "            std_x = math.sqrt(ssq_x/ (n-1))\n",
-    "            for x in series_d[d]:\n",
-    "                if (x - mu_x)/ std_x  > 1 + 1e-5:\n",
-    "                    import code; code.interact(local=dict(globals(), **locals()))\n",
+    "#             for x in series_d[d]:\n",
+    "#                 if (x - mu_x)/ std_x  > 1 + 1e-5:\n",
+    "#                     import code; code.interact(local=dict(globals(), **locals()))\n",
     "                    \n",
     "            series_d[d] = [(x - mu_x)/ std_x for x in series_d[d]]\n",
+    "            \n",
+    "        # rescale\n",
+    "        for d in range(lb, ub):\n",
+    "            min_x = min(series_d[d])\n",
+    "            max_x = max(series_d[d])\n",
+    "#             for x in series_d[d]:\n",
+    "#                 if (2*x - min_x - max_x)/ (max_x - min_x) > 1 + 1e-5:\n",
+    "#                     import code; code.interact(local=dict(globals(), **locals()))\n",
+    "                    \n",
+    "            series_d[d] = [\n",
+    "                (2*x - min_x - max_x)/ (max_x - min_x)\n",
+    "                for x in series_d[d]\n",
+    "            ]\n",
     "            \n",
     "\n",
     "        # move rescaled and standardized back to sparse_features\n",
