Replacing propbank.features to propbank.columns

--- a/07-evaluations_consolidate.ipynb
+++ b/07-evaluations_consolidate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -184,21 +184,56 @@
       "liblinear accuracy:37.76\n",
       "liblinear mse:70.66\n",
       "svm: 0.0 0.0\n",
+      "liblinear accuracy:49.05\n",
+      "liblinear mse:60.46\n",
+      "liblinear accuracy:47.05\n",
+      "liblinear mse:71.80\n",
+      "svm: 0.09 0.08\n",
       "liblinear accuracy:71.09\n",
       "liblinear mse:75.47\n",
       "liblinear accuracy:51.13\n",
       "liblinear mse:127.63\n",
       "svm: 0.0 0.0\n",
+      "liblinear accuracy:71.33\n",
+      "liblinear mse:43.67\n",
+      "liblinear accuracy:52.38\n",
+      "liblinear mse:84.43\n",
+      "svm: 0.07 0.21\n",
+      "liblinear accuracy:71.33\n",
+      "liblinear mse:43.70\n",
+      "liblinear accuracy:52.35\n",
+      "liblinear mse:84.55\n",
+      "svm: 0.07 0.21\n",
       "liblinear accuracy:71.09\n",
       "liblinear mse:75.49\n",
       "liblinear accuracy:51.20\n",
       "liblinear mse:127.46\n",
       "svm: 0.0 0.0\n",
+      "liblinear accuracy:71.09\n",
+      "liblinear mse:44.07\n",
+      "liblinear accuracy:51.19\n",
+      "liblinear mse:82.62\n",
+      "svm: 0.07 0.21\n",
+      "liblinear accuracy:63.30\n",
+      "liblinear mse:55.05\n",
+      "liblinear accuracy:53.40\n",
+      "liblinear mse:80.58\n",
+      "svm: 0.11 0.14\n",
       "liblinear accuracy:62.70\n",
       "liblinear mse:97.19\n",
       "liblinear accuracy:52.10\n",
       "liblinear mse:122.39\n",
       "svm: 0.01 0.0\n",
+      "liblinear accuracy:62.71\n",
+      "liblinear mse:55.66\n",
+      "liblinear accuracy:52.07\n",
+      "liblinear mse:79.58\n",
+      "svm: 0.11 0.14\n",
+      "liblinear accuracy:73.39\n",
+      "liblinear mse:40.66\n",
+      "liblinear accuracy:48.49\n",
+      "liblinear mse:98.77\n",
+      "svm: 0.07 0.26\n",
       "liblinear accuracy:73.35\n",
       "liblinear mse:68.96\n",
       "liblinear accuracy:47.18\n",
@@ -219,6 +254,11 @@
       "liblinear accuracy:41.64\n",
       "liblinear mse:57.68\n",
       "svm: 0.0 0.0\n",
+      "liblinear accuracy:71.89\n",
+      "liblinear mse:43.99\n",
+      "liblinear accuracy:48.06\n",
+      "liblinear mse:102.79\n",
+      "svm: 0.09 0.32\n",
       "liblinear accuracy:71.75\n",
       "liblinear mse:73.80\n",
       "liblinear accuracy:46.85\n",
@@ -229,6 +269,11 @@
       "liblinear accuracy:46.82\n",
       "liblinear mse:103.91\n",
       "svm: 0.08 0.19\n",
+      "liblinear accuracy:71.71\n",
+      "liblinear mse:44.74\n",
+      "liblinear accuracy:48.41\n",
+      "liblinear mse:100.33\n",
+      "svm: 0.06 0.29\n",
       "liblinear accuracy:71.75\n",
       "liblinear mse:72.99\n",
       "liblinear accuracy:47.45\n",
@@ -244,6 +289,16 @@
       "liblinear accuracy:47.11\n",
       "liblinear mse:149.45\n",
       "svm: 0.01 0.04\n",
+      "liblinear accuracy:73.38\n",
+      "liblinear mse:40.70\n",
+      "liblinear accuracy:48.42\n",
+      "liblinear mse:98.79\n",
+      "svm: 0.06 0.26\n",
+      "liblinear accuracy:72.69\n",
+      "liblinear mse:41.68\n",
+      "liblinear accuracy:50.84\n",
+      "liblinear mse:89.03\n",
+      "svm: 0.08 0.2\n",
       "liblinear accuracy:72.56\n",
       "liblinear mse:71.40\n",
       "liblinear accuracy:49.38\n",
@@ -253,7 +308,12 @@
       "liblinear mse:41.90\n",
       "liblinear accuracy:49.41\n",
       "liblinear mse:90.45\n",
-      "svm: 0.08 0.17\n"
+      "svm: 0.08 0.17\n",
+      "liblinear accuracy:43.99\n",
+      "liblinear mse:61.54\n",
+      "liblinear accuracy:41.76\n",
+      "liblinear mse:72.61\n",
+      "svm: 0.0 0.0\n"
      ]
     }
    ],
